# organix

./: Cargo.toml  README.md
.github/workflows/: ci_checks.yaml
examples/: stdin_echo.rs
organix-derive/: Cargo.toml
organix-derive/src/: ast.rs  gen.rs  lib.rs  symbol.rs
src/: lib.rs  runtime.rs
src/service/: intercom.rs  mod.rs  stats.rs
src/watchdog/: control_command.rs  mod.rs  monitor.rs
tests/: ping_pong.rs  watchdog.rs
