[package]
name = "organix"
version = "0.1.1"
authors = [
        "Nicolas Di Prima <nicolas@primetype.co.uk>",
    ]
edition = "2018"
license = "Apache-2.0 OR MIT"
readme = "README.md"
repository = "https://github.com/primetype/organix"
description = """
Building organic application in rust, leveraging tokio and defining inter communication layer mechanism
"""

[badges]
is-it-maintained-issue-resolution = { repository = "primetype/organix" }
is-it-maintained-open-issues = { repository = "primetype/organix" }
maintenance = { status = "actively-developed" }

[dependencies]
organix-derive = { version = "0.1.0", path = "./organix-derive" }
tokio = { version = "^0.2.21", features = ["sync", "rt-threaded", "parking_lot", "time"] }
tracing = "^0.1.13"
tracing-futures = "^0.2.3"
futures-util = "0.3"
thiserror = "1.0"
async-trait = "^0.1.29"

[dev-dependencies]
approx = "0.3"
tokio = { version = "^0.2.21", features = ["full"] }
tokio-compat = "^0.1.5"
tracing-subscriber = "0.2.5"

[package.metadata.docs.rs]
targets = []

[workspace]
members = [ "organix-derive" ]