[package]
name = "organix-derive"
version = "0.1.0"
authors = ["Nicolas Di Prima <nicolas@primetype.co.uk>"]
edition = "2018"
license = "Apache-2.0 OR MIT"
readme = "../README.md"
repository = "https://github.com/primetype/organix"
description = """
Building organic application in rust, leveraging tokio and defining inter communication layer mechanism
"""

[lib]
proc-macro = true

[dependencies]
syn = { version = "1", default-features = false, features = ["derive", "parsing", "proc-macro"] }
quote = "1"
proc-macro2 = "1"
proc-macro-error = "1.0.2"
